--- a/src/components/date-wishes/date-wishes.scss
+++ b/src/components/date-wishes/date-wishes.scss
@@ -55,7 +55,7 @@
   margin-bottom: 20px;
 
   .input-group__input {
-    &--button-split {
+    &_double-button {
       width: 106px;
 
       @media (max-width: 380px) {
