--- a/src/components/likebtn/likebtn.scss
+++ b/src/components/likebtn/likebtn.scss
@@ -50,7 +50,7 @@
   background: url('../../components/likebtn/like.png') no-repeat;
 }
 
-.likebtn__item--active button {
+.likebtn__item_active button {
   color: $accentColor;
   border-color: $accentColor;
 
