--- a/src/components/logo/logo.pug
+++ b/src/components/logo/logo.pug
@@ -2,7 +2,7 @@ mixin logo(options = {})
   - const logoId = options.id ? options.id : "logo-id";
 
   if (options.isBig) 
-    div(class="logo logo--big")
+    div(class="logo logo_big")
       .logo__big-pict
   else
     div(class="logo")
