--- a/src/components/bullet-list/bullet-list.pug
+++ b/src/components/bullet-list/bullet-list.pug
@@ -1,7 +1,7 @@
 mixin bullet(options = {})
   -
     const titleClass = options.isTitleLeftPadding
-      ? "bullet__title  bullet__title--lp"
+      ? "bullet__title  bullet__title_lp"
       : "bullet__title";
 
   .bullet
