--- a/src/components/drop-down/drop-down.scss
+++ b/src/components/drop-down/drop-down.scss
@@ -14,7 +14,7 @@
   opacity: 0;
   transition: all 0.2s ease-in;
 
-  &--show {
+  &_opened {
     transform: translateY(0);
     visibility: visible;
     opacity: 1;
@@ -85,7 +85,7 @@
   border-radius: 50%;
   cursor: pointer;
 
-  &--plus::after {
+  &_plus::after {
     position: absolute;
     top: 2px;
     right: 0;
@@ -94,7 +94,7 @@
     content: '+';
   }
 
-  &--minus::after {
+  &_minus::after {
     position: absolute;
     top: 2px;
     right: 0;
@@ -137,7 +137,7 @@
     transform: translateY(3px);
   }
 
-  &--accent {
+  &_accentuating {
     color: $accentColor;
 
     &:hover {
@@ -145,7 +145,7 @@
     }
   }
 
-  &--hide {
+  &_hiden {
     opacity: 0;
     visibility: hidden;
   }
