--- a/src/components/hotel-card/hotel-card.pug
+++ b/src/components/hotel-card/hotel-card.pug
@@ -3,7 +3,7 @@ include ../ratebtn/ratebtn
 mixin hotelCard(options = {})
   -
     const sliderBtnClass = options.isBtnSliderHide
-      ? "hotel-card__slider-control  hotel-card__slider-control--hide"
+      ? "hotel-card__slider-control  hotel-card__slider-control_hiden"
       : "hotel-card__slider-control";
   section.hotel-card
     div(class="hotel-card__wrap  glide")
@@ -12,8 +12,8 @@ mixin hotelCard(options = {})
           each image in options.images
             li.glide__slide #[img(src=image.src, alt=image.alt)]
         div(class="glide__arrows" data-glide-el="controls")
-          button(class="glide__arrow  glide__arrow--left  hotel-card__slider-btn" data-glide-dir="<" type="button") Назад
-          button(class="glide__arrow  glide__arrow--right  hotel-card__slider-btn  hotel-card__slider-btn--next" data-glide-dir=">" type="button") Вперед
+          button(class="glide__arrow  glide__arrow_left  hotel-card__slider-btn" data-glide-dir="<" type="button") Назад
+          button(class="glide__arrow  glide__arrow_right  hotel-card__slider-btn  hotel-card__slider-btn_next" data-glide-dir=">" type="button") Вперед
         div(class="hotel-card__bullets  glide__bullets" data-glide-el="controls[nav]")
           each image, index in options.images
             button(class="glide__bullet" data-glide-dir=`=${index}` type="button")
@@ -28,4 +28,4 @@ mixin hotelCard(options = {})
           p.hotel-card__text #[b= options.dayCost + "₽"] в сутки
         .hotel-card__info-item
           +ratebtn({ items: [{ idGroup: options.idRateBtn, currentRating: options.starCount }] })
-          p(class="hotel-card__text  hotel-card__text--fzlarge") #[b= options.reviewCount] Отзывов
+          p(class="hotel-card__text  hotel-card__text_fzlarge") #[b= options.reviewCount] Отзывов
