--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -2,7 +2,7 @@
   display: flex;
   margin: 0;
 
-  &--column {
+&_with-label {
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
@@ -38,7 +38,7 @@
   text-transform: uppercase;
 }
 
-.input-group__label--big {
+.input-group__label_big {
   font-size: 12px;
   line-height: 15px;
   font-family: Montserrat, Quicksand, Arial, sans-serif;
@@ -70,27 +70,27 @@
   outline: none;
   transition: border 0.4s ease;
 
-  &--icon {
+  &_with-icon {
     background: url('../../components/input/expand-more.svg') no-repeat;
     background-position: 95% center;
   }
 
-  &--button-split {
+  &_double-button {
     position: relative;
     padding-right: 0;
     border-right: none;
     border-radius: 4px 0 0 4px;
   }
 
-  &--fake {
+  &_fake {
     cursor: pointer;
   }
 
-  &--active {
+  &_active {
     border-color: transparentize($contentColor, 0.5);
   }
 
-  &--hover {
+  &_hovered {
     border-color: transparentize($contentColor, 0.25);
 
     &::placeholder {
@@ -115,7 +115,7 @@
   }
 }
 
-.input-group__input--dark-placeholder {
+.input-group__input_dark-placeholder {
   &::placeholder {
     color: transparentize($contentColor, 0.25);
   }
@@ -143,7 +143,7 @@
     transition: transform 0.1s ease;
   }
 
-  &--down-animation {
+  &_down-animation {
     &:active {
       img {
         transform: translateY(2px);
@@ -151,7 +151,7 @@
     }
   }
 
-  &--right-animation {
+  &_right-animation {
     &:active {
       img {
         transform: translateX(5px);
