--- a/src/components/pie-chart/pie-chart.scss
+++ b/src/components/pie-chart/pie-chart.scss
@@ -75,19 +75,19 @@
     background: linear-gradient(180deg, #919191 0%, #3d4975 100%);
   }
 
-  &--yellow {
+  &_yellow {
     &::before {
       background: linear-gradient(180deg, #ffe39c 0%, #ffba9c 100%);
     }
   }
 
-  &--green {
+  &_green {
     &::before {
       background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
     }
   }
 
-  &--purple {
+  &_purple {
     &::before {
       background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
     }
