--- a/src/page/rooms/rooms.pug
+++ b/src/page/rooms/rooms.pug
@@ -191,7 +191,7 @@ block content
     .rooms-page__wrap
       .filter
         .filter__wrap
-          div(class="filter__item  filter__item--mbs")
+          div(class="filter__item  filter__item_mbs")
             +input({
               id: "date-picker-input",
               isFakeInput: true,
