--- a/src/components/main-menu/main-menu.scss
+++ b/src/components/main-menu/main-menu.scss
@@ -112,6 +112,13 @@
   opacity: 0;
   transition: all 0.4s ease;
 
+  &_opened {
+    z-index: 100;
+    transform: translate(-50%, 0);
+    visibility: visible;
+    opacity: 1;
+  }
+
   @media (max-width: 1024px) {
     top: 45px;
   }
@@ -215,13 +222,6 @@
     vertical-align: top;
     border-top: 1px solid transparentize($contentColor, 0.75);
   }
-}
-
-.main-menu__item:hover > .main-menu__sub-menu {
-  z-index: 100;
-  transform: translate(-50%, 0);
-  visibility: visible;
-  opacity: 1;
 }
 
 .main-menu__sub-item {
